# card-binder

./: README.md  app.py  pyproject.toml
src/: first_test.ipynb  main.py
src/core/: card_downloader.py
static/Legend_of_Blue_Eyes_White_Dragon/: Aqua_Madoor_85639257.json  Armaill_53153481.json  Armed_Ninja_9076207.json  Armored_Starfish_17535588.json  Basic_Insect_89091579.json  Beast_Fangs_46009906.json  Beaver_Warrior_32452818.json  Blue-Eyes_White_Dragon_89631139.json  Book_of_Secret_Arts_91595718.json  Celtic_Guardian_91152256.json  Charubin_the_Fire_Knight_37421579.json  Curse_of_Dragon_28279543.json  Dark_Energy_4614116.json  Dark_Gray_9159938.json  Dark_Hole_53129443.json  Dark_King_of_the_Abyss_53375573.json  Dark_Magician_46986414.json  Darkfire_Dragon_17881964.json  Darkworld_Thorns_43500484.json  Dissolverock_40826495.json  Dragon_Capture_Jar_50045299.json  Dragon_Treasure_1435851.json  Dragoness_the_Wicked_Knight_70681994.json  Drooling_Lizard_16353197.json  Electro-Whip_37820550.json  Enchanting_Mermaid_75376965.json  Exodia_the_Forbidden_One_33396948.json  Fiend_Reflection_#2_2863439.json  Final_Flame_73134082.json  Firegrass_53293545.json  Fireyarou_71407486.json  Fissure_66788016.json  Flame_Ghost_58528964.json  Flame_Manipulator_34460851.json  Flame_Swordsman_45231177.json  Flower_Wolf_95952802.json  Follow_Wind_98252586.json  Forest_87430998.json  Frenzied_Panda_98818516.json  Fusionist_1641882.json  (+86 more)
static/Metal_Raiders/: 7_Colored_Fish_23771716.json  Ancient_Brain_42431843.json  Ancient_Elf_93221206.json  (+141 more)
templates/: index.html  set.html
(+100 files in other folders)
