[project]
name = "card-binder"
version = "0.1.0"
description = ""
authors = [
    {name = "'Sergio'",email = "'sergio123gxs@gmail.com'"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "flask (>=3.1.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "card_binder", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
